Add module with integration tests